compile_tests/tests/compile-fail/example_compile_error.rs
extern crate neon;

use neon::js::JsInteger;

fn main() {
    JsInteger::new(scope, "9000")
    //~^ ERROR unresolved name
    //~| ERROR mismatched types
    //~| ERROR mismatched types
}
